# script_scaffold

./: .gitignore  FLOW.md  INTENTIONS.md  README.md  ai_gates.py  db.py  llm.py  lookup.py  models.py  pyproject.toml  repository.py  requirements.txt  rss_crawler.py  search.py  source_items.py  source_repository.py  sources.py  utils.py
.playwright-mcp/: page-2026-06-16T17-24-08-565Z.yml
tests/: test_ai_chat_chunks.py  test_merge_web_search.py  test_source_items.py
