[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "script-scaffold"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
rss = [
    "feedparser>=6.0",
]
search = [
    "openai>=1.0",
    "tavily-python>=0.3",
    "duckduckgo-search>=5.0",
]
llm = [
    "langchain-core>=0.2",
    "langchain-openai>=0.1",
    "langchain-ollama>=0.1",
]
all = ["script-scaffold[rss,search,llm]"]

[tool.setuptools]
packages = ["script_scaffold"]

[tool.setuptools.package-dir]
"script_scaffold" = "."
